@@ -59,6 +59,10 @@ Release date: TBA
 
   Closes #4945
 
+* Fix false positive ``superfluous-parens`` for tuples created with inner tuples
+
+  Closes #4907
+
 
 What's New in Pylint 2.10.3?
 ============================
